--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "backbone.marionette": "^2.3.2",
     "coffee-script": "^1.9.0",
-    "handlebars": "^2.0.0"
+    "handlebars": "^2.0.0",
+    "node-static": "^0.7.6"
   }
 }
